edits to notebook story

--- a/function_calling_first_priniciples.ipynb
+++ b/function_calling_first_priniciples.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Function Calling from First Principles\n",
+    "In this notebook, I'll be working through an example that shows how to do function calling with LLMs.  Function calling is a design pattern that takes advantage of the LLMs immanent knowledge of JSON schema to arm it with the ability to interact with its environment.  \n",
+    "\n",
+    "These interaction allow the model to pursue goals with a greater scope of influence than just writing words.  There is a massive potential for goal seeking LLMs across a wide range of use cases, because of the open endedness of the problem solving approach.\n",
+    "\n",
+    "For this example, I have limited the LLMs scope to one tool in order to keep the example focused on understanding what's happening when an LLM actually uses external tools.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,7 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting up Bedrock API."
+    "## Setting up Bedrock API.\n",
+    "\n",
+    "We'll use AWS bedrock models, specifically Claude V2, to test this design pattern."
    ]
   },
   {
@@ -49,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's take a look at which models we have access to."
+    "Let's take a look at which models we have access to."
    ]
   },
   {
@@ -300,9 +315,9 @@
    "metadata": {},
    "source": [
     "## 1 - The Linear Regression Tool:\n",
-    "In order to demonstrate the power of function calling, we'll consider a simple example.  In this example, the language model has been given a simple tool, a linear regression model.  We'll use the python scipy libraryto generate simple linear models.  \n",
+    "In order to demonstrate function calling, we'll consider a simple example.  In this example, the language model has been given one tool, a linear regression model.  The tool uses the python scipy library to generate linear models.  \n",
     "\n",
-    "The model will pursue an illustrative goal.  We're telling it to look for a positive linear trend between pairs of data columns.  The model will guess and check column pairs, passing the data into the linear regression tool, and then analyzing the results.  If it fails to find the positive trend, it will make another attempt with new columns.  It will continue this approach until it finds the desired trend or the maximum number of iterations has been reached."
+    "The LLM will pursue one goal.  We're telling it to look for a positive linear trend between pairs of data columns.  The LLM will do this by guessing and checking column pairs using the tool.  It passes the data into the linear regression tool, and the results are sent back to the LLM as part of the user query.  It then analyzes the tool response, and if it failes to find a positive trend, it will make another attempt with new columns.  It will continue this approach until it finds a positive trend or the maximum number of iterations has been reached."
    ]
   },
   {
@@ -480,7 +495,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function parser check the completion for function calls, and runs them if any are found."
+    "Here we can clearly see that the LLM wants to call a function.\n",
+    "\n",
+    "The function parser will now check the completion for function calls, and run them if any are found."
    ]
   },
   {
@@ -563,7 +580,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may get slightly different results every time you run this code, but it should always produce a function call to the linear model.  Experiment with it to see what it does!"
+    "You may get slightly different results every time you run this code, but it should always produce a function call to the linear model."
    ]
   },
   {
@@ -576,7 +593,7 @@
     "\n",
     "In this simple example, we're looking for simple linear trends using one tool.  However, it's possible to orchestrate a system of tools, or even a system of LLMs to be able to automate even more novel types of workflows.\n",
     "\n",
-    "The available literature and code is full of more sophisticaed examples than this one, but I hope this at least serves the purpose of peeling back the layers of the onion, so we can start to see what's really going on in agentic function calls.\n"
+    "The available literature and code is full of more sophisticaed examples.  Here, we are peeling back the layers of the onion, so we can start to see what's really going on in agentic function calls.\n"
    ]
   },
   {
@@ -600,12 +617,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with the data.  Here's some mock sales KPI data generated for our hypothetical hot dog stand."
+    "Let's start with the data.  Here's some mock sales KPI data generated for our hypothetical hot dog stand.\n",
+    "\n",
+    "It uses a pipe delmited format, but this is not a hard requirement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +830,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#: Need to give the actual python function to the LLM as well\n",
+    "#: We need to give the actual python function to the LLM in addition to the JSON spec.\n",
     "functions  = {\"run_linear_trend_model\": run_linear_trend_model}\n",
     "\n",
     "#: Initialize our framework\n",
@@ -899,13 +918,20 @@
    "metadata": {},
    "source": [
     "## Results\n",
-    "If you run the LLM framework multiple times, you will get different trajectories.  There are a few different positive trends in the data, so there are also different terminating cases.  In my experience it takes about 3-5 iterations for the LLM to find one, although it will occasionally find one on the first try.\n",
+    "If you run the LLM framework multiple times, you will get different trajectories.  There are a few different positive trends in the data, which means there's also different terminating cases.  In my experience it takes about 3-5 iterations for the LLM to find the desired trend, although it will occasionally find one on the first try.\n",
     "\n",
-    "This simple example is ripe for extension.  With the tools provided, it would be simple to extend the prompt and goal loop to qualify the data trends more holistically.  Perhaps we could add new types of models to this framework.\n",
+    "This simple example is ripe for extension.  With the tool provided, it would be simple to extend the prompt and goal loop to qualify the data trends more holistically.  Perhaps we could add new types of models to this framework.\n",
+    "\n",
+    "Additionally, adding more tools would allow for an even greater scope of possible goals for the LLM to pursue.\n",
     "\n",
     "Please comment and let me know if this inspired you to try any new ideas!\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
